# govld

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml  upload-files-release.yml
examples/: main.rs  patch.yaml  patch_optional.yaml  patch_optional_but_exists.yaml  patch_overwrite.yaml  patch_receiver_check.yaml
examples/function-declarations/: README.md  main.rs  patch.yaml  patch_method.yaml
examples/function-declarations/pkg_b/: go.mod
examples/function-declarations/pkg_b/internal/: module.go
examples/function-declarations/pkg_main/: go.mod
examples/pkg_b/: module.go
examples/pkg_b/internal/: module.go  receiver_no_name.go
examples/pkg_main/: main.go
src/: cli.rs  fs_buffer.rs  lib.rs  main.rs  manifest.rs  patterns.rs  run.rs  text.rs
src/patch/: parser.rs  test_parser.go
src/patterns/: const_decl.rs  func_decl.rs  import_decl.rs  interface_decl.rs  method_decl.rs  method_decl_with_receiver_name.rs  method_decl_without_receiver_name.rs  mod.rs  module_decl.rs  struct_decl.rs  variable_decl.rs
