[package]
name = "govld"
version = "0.0.14"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }

tree-sitter = "0.22"
tree-sitter-go = "0.21"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde = { version = "1", features = ["derive"] }
toml = "0.8"

similar = { version = "2", features = ["inline"] }
console = "0.15"

color-eyre = "0.6"

[dev-dependencies]
pretty_assertions = "1"
